<feat>: DN-281 Write implementation - Added google maps package - Implemented user location getter repository with geolocator package - Map is shown with user location at its center

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>LastMile Driver requires your location to give orders near you.</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>LastMile Driver requires your location when app is running in background</string>
 </dict>
 </plist>
