--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lastmile_mobile">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
    <application
-        android:label="lastmile_mobile"
+        android:label="LastMile Driver"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+       >
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyA6wi71WKT7uiNYvFLd3amQD3WlYnkxa7Y"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
