--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,20 @@ dependencies:
   # hive for local storage
   hive: ^2.2.3
 
+  # google map
+  google_maps_flutter: ^2.2.1
+
+  # geo locator for tracking user location
+  geolocator: ^9.0.2
+
   # equitable for comparing objects
   equatable: ^2.0.5
 
   # Get it for dependency issue
   get_it: ^7.2.0
+
+  # permission handler
+  permission_handler: ^10.2.0
 
   # flutter bloc for state management
   flutter_bloc: ^8.1.1
@@ -37,6 +46,8 @@ dependencies:
   shimmer:
   infinite_scroll_pagination:
   internet_connection_checker:
+  flutter_phosphor_icons:
+  flutter_native_splash: ^2.2.14
 
 dev_dependencies:
   flutter_test:
@@ -52,3 +63,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  generate: true
+
+  # Assets
+  assets:
+    - assets/images/
