DN_187- Create feature files and step defintions add: driver status feature file add: driver profile bloc, fix: ios map configuration fix: ios location service

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,8 @@
 	<string>LastMile Driver requires your location when app is running in background</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>LastMile Driver requires your location to give orders near you.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>LastMile Driver always requires your location to give orders near you.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
