--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   internet_connection_checker:
   flutter_phosphor_icons:
   flutter_native_splash: ^2.2.14
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
