--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
   network_image_mock:
   build_runner:
   bdd_widget_test:
+  change_app_package_name: ^1.1.0
 
 # The following section is specific to Flutter packages.
 flutter:
