--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_phosphor_icons:
   flutter_native_splash: ^2.2.14
   socket_io_client: ^1.0.2
+  bloc_test: ^9.1.0
 
 dev_dependencies:
   flutter_test:
