--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
   # google map
   google_maps_flutter: ^2.2.1
+  flutter_polyline_points: ^1.0.0
 
   # geo locator for tracking user location
   geolocator: ^9.0.2
