--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_native_splash: ^2.2.14
   socket_io_client: ^1.0.2
   bloc_test: ^9.1.0
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
