--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
 
   # hive for local storage
   hive: ^2.2.3
+  path_provider: ^2.0.11
 
   # google map
   google_maps_flutter: ^2.2.1
@@ -50,7 +51,7 @@ dependencies:
   flutter_phosphor_icons:
   flutter_native_splash: ^2.2.14
   socket_io_client: ^1.0.2
-  bloc_test: ^9.1.0
+  bloc_test:
   flutter_slidable: ^2.0.0
 
 dev_dependencies:
@@ -63,6 +64,7 @@ dev_dependencies:
   build_runner:
   bdd_widget_test:
   change_app_package_name: ^1.1.0
+  hive_generator: ^1.1.2
 
 # The following section is specific to Flutter packages.
 flutter:
