--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   socket_io_client: ^1.0.2
   bloc_test:
   flutter_slidable: ^2.0.0
+  dotted_line: ^3.1.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
