--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   dotted_line: ^3.1.0
   url_launcher: ^6.1.6
   pinput: ^1.2.0
-
+  flutter_local_notifications: ^12.0.3+1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
