--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
   bdd_widget_test:
   change_app_package_name: ^1.1.0
   hive_generator: ^1.1.2
+  hive_test: ^1.0.1
 
 # The following section is specific to Flutter packages.
 flutter:
