Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ stages:
 dev_test:
   stage: test
   tags:
-    - flutter
-    #-2f-flutter-ssh
+    #- flutter
+    - 2f-flutter-ssh
   before_script:
     - flutter clean
   script:
@@ -24,8 +24,8 @@ dev_test:
 android:debug:
   stage: build
   tags:
-    - flutter
-    #- 2f-flutter-ssh
+    #- flutter
+    - 2f-flutter-ssh
   script:
     - flutter doctor --android-licenses
     - flutter build apk --flavor ${FLAVOR} --debug
