--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,4 +36,19 @@ android:debug:
       refs:
           - dev
 
+android:release:
+  stage: build
+  tags:
+    - 2f-flutter-ssh
+  script:
+    - flutter doctor --android-licenses
+    - flutter build apk --release
+  artifacts:
+    paths:
+      - "**/**/**/**/**/**/*.apk"
+    expire_in: 1 day
+
+  only:
+      refs:
+          - main
 
