--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_background_service: 2.4.5 
   # hive for local storage
   hive: ^2.2.3
   path_provider: ^2.0.11
