--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ stages:
 dev_test:
   stage: test
   tags:
-    - flutter-runner
+    - flutter
+    #- flutter-runner
     #- 2f-flutter-ssh
   before_script:
     - flutter clean
@@ -24,7 +25,8 @@ dev_test:
 android:debug:
   stage: build
   tags:
-    - flutter-runner
+    - flutter
+    #- flutter-runner
     #- 2f-flutter-ssh
   script:
     - flutter doctor --android-licenses
@@ -41,7 +43,8 @@ android:debug:
 android:release:
   stage: build
   tags:
-    - flutter-runner
+    - flutter
+    #- flutter-runner
     #- 2f-flutter-ssh
   script:
     - flutter doctor --android-licenses
