--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   url_launcher: ^6.1.6
   pinput: ^1.2.0
   flutter_local_notifications: ^12.0.3+1
+  firebase_messaging: ^14.1.2
+  firebase_core: ^2.3.0
   
 dev_dependencies:
   flutter_test:
