--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   url_launcher: ^6.1.6
   pinput: ^1.2.0
   country_code_picker: ^2.0.2
+  lottie: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -83,3 +84,4 @@ flutter:
   # Assets
   assets:
     - assets/images/
+    - assets/lottie/
