--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,8 @@ dependencies:
   firebase_core: ^2.3.0
   country_code_picker: ^2.0.2
   lottie: ^2.0.0
-
+  intl: ^0.17.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
